--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
     "pg": "^8.16.3",
+    "resend": "^6.0.1",
     "tsx": "^4.20.4",
     "typescript": "^5.9.2",
     "uuid": "^11.1.0"
