--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,26 @@
 {
   "compilerOptions": {
-    "target": "ES2020",                      
-    "module": "CommonJS",                    
-    "moduleResolution": "Node",              
-    "esModuleInterop": true,                 
+    "target": "ES2020",
+    "module": "CommonJS",
+    "moduleResolution": "Node",
+    "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    "strict": true,                          
-    "skipLibCheck": true,                
-    "outDir": "./dist",                      
-    "rootDir": "./src",                      
+    "strict": true,
+    "skipLibCheck": true,
+    "outDir": "./dist",
+    "rootDir": "./src",
 
-    "resolveJsonModule": true,               
-    "allowSyntheticDefaultImports": true,    
-    "baseUrl": "./src"                       
+    "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true,
+    "baseUrl": "./src",
+
+    "paths": {
+      "db": ["db/*"],
+      "routes": ["routes/*"],
+      "controllers": ["controllers/*"],
+      "utils": ["utils/*"],
+      "middlewares": ["middlewares/*"]
+    }
   },
   "include": ["src"],
   "exclude": ["node_modules", "dist"]
